--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
 body {
   margin: 0;
   padding: 0;
+  max-width: 100vw;
   font-family: sans-serif;
+  padding: 1rem;
+  padding-right: 2rem;
+  box-sizing: border-box;
+}
+
+.App {
+
 }
