--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,10 @@ body {
   box-sizing: border-box;
 }
 
-.App {
+#mask {
+  transition: background ease-in 2s;
+}
 
+.fullMask {
+  background: "black";
 }
